--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,31 @@
     <string name="app_name">GryTerenowe</string>
     <string name="Open">Otwórz</string>
     <string name="Close">Zamknij</string>
+    <string name="X">Witaj w świecie Uniwersytetu Ekonomicznego pozwól, że oprowadzę Cię po budynkach uczelnii</string>
+    <string name="Dalej">Dalej</string>
+    <string name="udaj_si_tam_gdzie_si_rekrutowa_e">Udaj się tam gdzie się rekrutowałeś</string>
+    <string name="w_planie_jest_to_budynek">W planie jest to budynek @</string>
+    <string name="wprowad_skr_t_budynku_w_kt_rym_jeste_mo_esz_zapyta_na_portierni">Wprowadź skrót budynku w którym jesteś\n
+        Możesz zapytać na portierni</string>
+    <string name="w_budynku_jest_biblioteka_odnajd_j_teraz_przyda_ci_si_jak_nie_bedziesz_czego">W budynku jest biblioteka odnajdź ją teraz, \n przyda Ci się jak nie bedziesz czegoś wiedzieć</string>
+    <string name="Na_ktorym_pietrze">Na którym piętrze teraz jesteś?</string>
+    <string name="Najnowoczesniejsza">Najnowocześniejsza aula jest w CNTI\nCzy ma patrona?</string>
+    <string name="tak">Tak</string>
+    <string name="CNTI7">Piękny widok z okno, pokazuje ci dwa budynki uczelni   W okresie letnim balkon jest otwarty   do dyspozycji studentów     Twoim celem jest budynek po prawej stronie   wejdź do niego od strony ulicy</string>
+    <string name="ksero">Ksero, przyjaciel studenta jest na 1 piętrze   obok niego jest strefa studenta   Jak myślisz która firma ją sfinansowała?</string>
+    <string name="popiersie">Na 4 piętrze Aula A się znajduje   Czyje popiersie jest obok wejścia do auli? Podaj nazwisko.</string>
+    <string name="winda">Teraz pokażę Ci skrót do budynku B. \n Zjedź windą na 1 piętro i skręć w prawo.</string>
+    <string name="skrot">Idź do czasu aż po lewej zobaczysz przejście. \n W zimę to skrót doskonały!</string>
+    <string name="pozwiedzaj_budynek_i_wpisz_ile_ma_auli">Pozwiedzaj budynek i wpisz ile ma auli.</string>
+    <string name="skrot_basen">Super! Teraz czas na basen. \n W budynku B na 1 piętrze znajdź skrót do kolejnego budynku. \n Spróbuj się dowiedzieć jaką ma literę.</string>
+    <string name="wf">Trafiłeś na galerię basenu. \n W tym budynku jest także sala gimnastyczna \n a każdy musi wf zaliczyć.</string>
+    <string name="podworze">Wyjdź głównym wyjściem z budynku C - trafisz na podwórze.</string>
+    <string name="sciany">Pokażę Ci przejście do budynku E. \n Trzymaj się blisko ściany po swojej lewej.</string>
+    <string name="drzwi">To stare drzwi, które mogą odstraszać, \n ale są niezwykle przydatne. \n Są dłużej otwarte niż brama od podwórza.</string>
+    <string name="budynekl">To budynek dziwnie łączony z innym - dowiedz się z jakim.</string>
+    <string name="rektor">Wyjdź głównymi drzwiami. \n Po drugiej stronie ulicy widzisz budynek Rektoratu. \n Jak nazywa się Rektor?</string>
+    <string name="dziekuje">Dziękuję za wspólną przygodę.</string>
+    <string name="nie">Nie</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
