--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="X">Witaj w świecie Uniwersytetu Ekonomicznego pozwól, że oprowadzę Cię po budynkach uczelnii</string>
     <string name="Dalej">Dalej</string>
     <string name="udaj_si_tam_gdzie_si_rekrutowa_e">Udaj się tam gdzie się rekrutowałeś</string>
-    <string name="w_planie_jest_to_budynek">W planie jest to budynek @</string>
+    <string name="w_planie_jest_to_budynek">W planie ten budynek ma dziwny zapis\nNa klawiaturze komputera to znak uzyskiwany dzięki\nShift + 2\nJaki to znak?</string>
     <string name="wprowad_skr_t_budynku_w_kt_rym_jeste_mo_esz_zapyta_na_portierni">Wprowadź skrót budynku w którym jesteś\n
         Możesz zapytać na portierni</string>
     <string name="w_budynku_jest_biblioteka_odnajd_j_teraz_przyda_ci_si_jak_nie_bedziesz_czego">W budynku jest biblioteka odnajdź ją teraz, \n przyda Ci się jak nie bedziesz czegoś wiedzieć</string>
@@ -30,4 +30,5 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="start">start</string>
 </resources>
