--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="tak">Tak</string>
     <string name="CNTI7">Piękny widok z okno, pokazuje ci dwa budynki uczelni   W okresie letnim balkon jest otwarty   do dyspozycji studentów     Twoim celem jest budynek po prawej stronie   wejdź do niego od strony ulicy</string>
     <string name="ksero">Ksero, przyjaciel studenta jest na 1 piętrze   obok niego jest strefa studenta   Jak myślisz która firma ją sfinansowała?</string>
-    <string name="popiersie">Na 4 piętrze Aula A się znajduje   Czyje popiersie jest obok wejścia do auli? Podaj nazwisko.</string>
+    <string name="popiersie">Na 4 piętrze Auli A znajduje się popiersie. Wiesz kto to? \n Podaj nazwisko.</string>
     <string name="winda">Teraz pokażę Ci skrót do budynku B. \n Zjedź windą na 1 piętro i skręć w prawo.</string>
     <string name="skrot">Idź do czasu aż po lewej zobaczysz przejście. \n W zimę to skrót doskonały!</string>
     <string name="pozwiedzaj_budynek_i_wpisz_ile_ma_auli">Pozwiedzaj budynek i wpisz ile ma auli.</string>
