--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="rektor">Wyjdź głównymi drzwiami. \n Po drugiej stronie ulicy widzisz budynek Rektoratu. \n Jak nazywa się Rektor?</string>
     <string name="dziekuje">Dziękuję za wspólną przygodę.</string>
     <string name="nie">Nie</string>
+    <string name="czas"></string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
