--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,9 +25,9 @@
     <string name="popiersie">Na 4 piętrze Auli A znajduje się popiersie. Wiesz kto to? \n Podaj nazwisko.</string>
     <string name="winda">Teraz pokażę Ci skrót do budynku B. \n Zjedź windą na 1 piętro i skręć w prawo.</string>
     <string name="skrot">Idź do czasu aż po lewej zobaczysz przejście. \n W zimę to skrót doskonały!</string>
-    <string name="pozwiedzaj_budynek_i_wpisz_ile_ma_auli">Pozwiedzaj budynek i wpisz ile ma auli.</string>
+    <string name="pozwiedzaj_budynek_i_wpisz_ile_ma_auli">Pozwiedzaj budynek B i wpisz ile ma auli.</string>
     <string name="skrot_basen">Super! Teraz czas na basen. \n W budynku B na 1 piętrze znajdź skrót do kolejnego budynku. \n Spróbuj się dowiedzieć jaką ma literę.</string>
-    <string name="wf">Trafiłeś na galerię basenu. \n W tym budynku jest także sala gimnastyczna \n a każdy musi wf zaliczyć.</string>
+    <string name="wf">Trafiłeś na galerię basenu. \n W tym budynku jest także sala gimnastyczna \n a każdy musi wf zaliczyć.\n Wf można zaliczyć jednak  udzielając się w: \n Silesianach lub w Chórze</string>
     <string name="podworze">Wyjdź głównym wyjściem z budynku C - trafisz na podwórze.</string>
     <string name="sciany">Pokażę Ci przejście do budynku E. \n Trzymaj się blisko ściany po swojej lewej.</string>
     <string name="drzwi">To stare drzwi, które mogą odstraszać, \n ale są niezwykle przydatne. \n Są dłużej otwarte niż brama od podwórza.</string>
@@ -40,4 +40,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="start">start</string>
+    <string name="google">Google</string>
+    <string name="ey">EY</string>
 </resources>
