--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,8 +29,8 @@
     <string name="skrot_basen">Super! Teraz czas na basen. \n W budynku B na 1 piętrze znajdź skrót do kolejnego budynku. \n Spróbuj się dowiedzieć jaką ma literę.</string>
     <string name="wf">Trafiłeś na galerię basenu. \n W tym budynku jest także sala gimnastyczna \n a każdy musi wf zaliczyć.\n Wf można zaliczyć jednak  udzielając się w: \n Silesianach lub w Chórze</string>
     <string name="podworze">Wyjdź głównym wyjściem z budynku C - trafisz na podwórze.</string>
-    <string name="sciany">Pokażę Ci przejście do budynku E. \n Trzymaj się blisko ściany po swojej lewej.</string>
-    <string name="drzwi">To stare drzwi, które mogą odstraszać, \n ale są niezwykle przydatne. \n Są dłużej otwarte niż brama od podwórza.</string>
+    <string name="sciany">Pokażę Ci przejście do budynku E. \n Idąc trzymaj się blisko ściany po swojej lewej. \n A przy okazji czy wiesz,\n że zawsze w sprawach studenckich może Ci pomoć \n Parlament Studencki</string>
+    <string name="drzwi">To stare drzwi, które mogą odstraszać, \n ale są niezwykle przydatne. \n Są dłużej otwarte niż brama od podwórza. \n Wejdź do środka</string>
     <string name="budynekl">To budynek dziwnie łączony z innym - dowiedz się z jakim.</string>
     <string name="rektor">Wyjdź głównymi drzwiami. \n Po drugiej stronie ulicy widzisz budynek Rektoratu. \n Jak nazywa się Rektor?</string>
     <string name="dziekuje">Dziękuję za wspólną przygodę.</string>
